inc/acf/blocks/photo-text/photo-text.module.scss
@use "../../../../src/scss/variables" as *;

.title {
  color: $text-dark;
  text-align: center;
  margin-bottom: 40px;
}

.content {
  display: flex;
  gap: 16px;
  flex-direction: column;
  align-items: stretch;
  justify-content: center;
}

.content-text {
  position: relative;
  min-height: 448px;
  padding-bottom: 96px;
  color: $text-dark;
}

.photo {
  max-width: 544px;
}

.photo img {
  border-radius: 12px;
  overflow: hidden;
}

.text {
  font-size: 24px;
  font-weight: 500;
}

.icon {
  position: absolute;
  left: 0;
  bottom: 0;
  width: 80px;
  height: 80px;
}

.icon-bg,
.icon-mask {
  width: 100%;
  height: 100%;
}

.icon-mask {
  position: absolute;
}

.icon-bg {
  position: absolute;
  animation: spin 4s linear infinite;
}

@keyframes spin {
  0% {
    rotate: 0deg;
  }

  100% {
    rotate: 360deg;
  }
}

@media screen and (min-width: 768px) {
  .container {
    max-width: 768px;
  }

  .title {
    font-size: 40px;
    margin-bottom: 28px;
  }

  .content-text {
    min-height: unset;
  }

  .photo {
    margin-bottom: 0;
  }

  .content {
    flex-direction: row;
  }

  .content > * {
    flex: 1;
  }
}

@media screen and (min-width: 1440px) {
  .container {
    max-width: 750px;
  }

  .content {
    gap: 26px;
  }
}

@media screen and (min-width: 1920px) {
  .container {
    max-width: 1030px;
  }

  .title {
    font-size: 54px;
    margin-bottom: 28px;
  }

  .content {
    gap: 20px;
  }

  .text {
    font-size: 36px;
  }

  .icon {
    width: 96px;
    height: 96px;
  }
}

